--- a/zotero2.bib
+++ b/zotero2.bib
@@ -1,4 +1,31 @@
 
+@collection{byrne_oxford_2019,
+	location = {New York, {NY}},
+	title = {The Oxford handbook of invertebrate neurobiology},
+	isbn = {978-0-19-045675-7},
+	pagetotal = {752},
+	publisher = {Oxford University Press},
+	editor = {Byrne, John H.},
+	date = {2019},
+	keywords = {Handbooks, manuals, etc, Invertebrates, Neurobiology, Physiology},
+}
+
+@article{pessoa_understanding_2014,
+	title = {Understanding brain networks and brain organization},
+	volume = {11},
+	issn = {15710645},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1571064514000451},
+	doi = {10.1016/j.plrev.2014.03.005},
+	pages = {400--435},
+	number = {3},
+	journaltitle = {Physics of Life Reviews},
+	shortjournal = {Physics of Life Reviews},
+	author = {Pessoa, Luiz},
+	urldate = {2023-08-03},
+	date = {2014-09},
+	langid = {english},
+}
+
 @online{open_ai_ai_2018,
 	title = {{AI} and Compute},
 	url = {https://openai.com/blog/ai-and-compute/},
